tests/paczka1/fuzzy1/49406240.err
Error in line 16: LG2wO A218 87,7
Error in line 19: A986 A986 63,1
Error in line 23: LpCT7LJI A986 16,2
Error in line 37: P0RxT A218 9,3
